# nova_enums

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Readme.md  conanfile.txt
.github/workflows/: ci.yml
inc/nova/enums/: enums.hpp
test/: enums_test.cpp
